--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Nunito', sans-serif;
+}
 html {
     font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
 }
@@ -24,4 +27,8 @@ main {
     /*line-height: 250%;*/
     position: relative;
     top: 15px;
+}
+
+.invalid {
+    color: red;
 }
